# ARVO

./: .gitattributes  .gitignore  .style.yapf  AIO.py  AUTHORS  BenchmarkCLI.py  DB_Manager.py  LICENSE  Locator.py  OpenAI.py  OpenAI_gpt.py  README.md  Setting.md  aviod.py  avoid.py  check_osv.py  cli.py  dbUpdate.py  dev.py  evaluate.py  fx.py  imageVerify.py  images.json  metaDataCollect.py  profile.template  pyproject.toml  reportData.py  reproducer.py  requirements.txt  resultData.py  results.py  transform.py  utils.py  utils_GPT.py  utils_LLMFix.py  utils_core.py  utils_diff.py  utils_docker.py  utils_experiments.py  utils_fx.py  (+7 more)
Reports/: 18993.json  22175.json  23656.json  24123.json  24200.json  24869.json  25536.json  26083.json  29884.json  30922.json  30931.json  30964.json  31127.json  3115.json  3122.json  3125.json  33066.json  33105.json  33183.json  33268.json  342.json  343.json  35371.json  35485.json  35566.json  35913.json  37413.json  381.json  42487096.json  43427.json  45631.json  45633.json  49274.json  49916.json  50203.json  55308.json  56171.json  5658.json  56898.json  57266.json  (+103 more)
arvo/: AIO.py  Avoid.md  BenchmarkCLI.py  DB_Manager.py  Locator.py  OpenAI.py  OpenAI_gpt.py  PLanguage.json  Results.json  __init__.py  arvo.db  avoid.py  check_osv.py  cli.py  dbUpdate.py  dev.py  evaluate.py  fx.py  imageVerify.py  metaDataCollect.py  oss_fuzz_mappings.csv  oss_fuzz_meta.tar  reportData.py  reproducer.py  resultData.py  results.py  starcoder.py  transform.py  upstream_false_positives.db  upstream_false_positives.db-journal  utils.py  utils_GPT.py  (+19 more)
(+10953 files in other folders)
